--- a/Project2/Project_description.Rmd
+++ b/Project2/Project_description.Rmd
@@ -18,8 +18,8 @@ library(ggpubr)
 The programs are implemented in Python (3) and we had no unsolved issues implementing the algorithms.
 Execution of the program on command line takes the form:
 
-```{r, engine = 'python', eval = FALSE}
-python suffix_tree_naive.py [text-filename] [str-pattern]
+```{r, engine = 'python', eval = FALSE, python.reticulate = F}
+python suffix_tree_naive.py [text-filename] [string-pattern]
 ```
 
 The output is directly to the console as a list of indexes of each first character of the pattern present in the text. If the pattern does not exist in the text `None` is returned.
@@ -38,17 +38,22 @@ We have also compared those results to the Naive exact match approach, and they 
 ## Time complexity
 
 ### Building the suffix tree
-The implementation of the algorithm was made using the naive approach, which has $O(n^2)$ time construction complexity. 
-We defined the worst scenario to build a suffix tree by creating a text $T$ that has alphabet size = 1. For example: 'aaaaaaaa`$`', where the sentinel character (`$`) is included in order to ensure that every suffix of the text `T$` is represented by a leave.
+The implementation of the algorithm was made using the naive approach, which has $O(n^2)$ time construction complexity.
+In the naive approach to construct the suffix tree, one suffix is added at time, simply by comparing one character at time from the root. 
+We defined the worst scenario to build a suffix tree by creating a text $T$ that has alphabet size $|\sum|$ = 1. For example: 'aaaaaaaa`$`', where the sentinel character (`$`) is included in order to ensure that every suffix of the text `T$` is represented by a leave.
 We increased the length of the text and stored the time of each tree-building operation.
 
-### Searching through the tree
-Once the suffix tree from $T$ is build then search through the suffix tree. Since all the substring of the text $T$ is present in the suffix tree it is easy to verify if a pattern $P$ would be present in the text. It goes from the first character of the pattern until its last, if one cannot proceed through the next character of pattern through the tree, it means that the pattern does not occur in the suffix tree/text. The operation of searching for the pattern through the tree takes O(m) time. 
+The best-case time bounds was construct by using text of ??random?? alphabet, so one would not need to go through all nodes of the tree before it finds a tip. 
 
+### Searching through the tree
+Once the suffix tree for $T$ is build, then searching through the suffix tree is trivial. Since all the substring of the text $T$ is present in the suffix tree it is easy to verify if a pattern $P$ would be present in the text. It goes from the first character of the pattern $P_[1]$ until its last $P_[m]$, if one cannot proceed through the next character of pattern through the tree, it means that the pattern does not occur in the suffix tree/text. The operation of searching for the pattern through the tree takes $O(m)$ time. 
+
+In the worst-case scenario the labels (suffixes) of the following path contain one character each, resulting in $m$ child looks-up, resulting in time complexity of $O(m * time it takes to find the child edge)$.
 We have decided to evaluate the data based on 4 different scenarios:
 * Tx-Pc: where the text is variable and the pattern is constant
 * Tc-Px: where the text is constant and the pattern is variable
 * Tx-Px: both text and patterns are variable
+
 ```{r}
 setwd('/Users/PM/Dropbox/Genome_scale_algorithms/Genome_scale_algorithms/Project2')
 library(dplyr)
