changed the report

--- a/Project2/Project_description.Rmd
+++ b/Project2/Project_description.Rmd
@@ -10,6 +10,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 library(ggpubr)
 ```
+Instruction of the project: https://github.com/mailund/gsa-exercises/tree/master/Project02
 
 ##Project 2 - Suffix tree construction
 
@@ -22,7 +23,7 @@ Execution of the program on command line takes the form:
 python suffix_tree_naive.py [text-filename] [string-pattern]
 ```
 
-The output is directly to the console as a list of indexes of each first character of the pattern present in the text. If the pattern does not exist in the text `None` is returned.
+The output is directly to the console as a list of indexes of each first character of the pattern present in the text. If the pattern does not exist in the text, `None` is returned.
 
 ## Test of search-suffix-tree-naive
 We used the data provided for testing which outputs the following results:
@@ -33,28 +34,19 @@ python suffix_tree_naive.py mississippi.txt ss
 python suffix_tree_naive.py banana.txt ana
 [2, 4]
 
-We have also compared those results to the Naive exact match approach, and they give the same indexes.
+We have also compared those results to the Naive exact match approach and they give the same indexes.
 
 ## Time complexity
 
 ### Building the suffix tree
 The implementation of the algorithm was made using the naive approach, which has $O(n^2)$ time construction complexity.
-In the naive approach to construct the suffix tree, one suffix is added at time, simply by comparing one character at time from the root. 
-We defined the worst scenario to build a suffix tree by creating a text $T$ that has alphabet size $|\sum|$ = 1. For example: 'aaaaaaaa`$`', where the sentinel character (`$`) is included in order to ensure that every suffix of the text `T$` is represented by a leave.
+To construct the suffix tree, each suffix is added at time, simply by comparing one character at time starting by the root of the tree. 
+The worst scenario to build a suffix tree was made by creating a text $T$ that has alphabet size $|\sum|$ = 1. For example: 'aaaaaaaa`$`', where the sentinel character (`$`) is included in order to ensure that every suffix of the text `T$` is represented by a leave.
+
 We increased the length of the text and stored the time of each tree-building operation.
+The best-case time bounds was construct by using text of `random` alphabet size, so one would not need to go through all nodes of the tree before it finds a tip to pull out the suffix. 
 
-The best-case time bounds was construct by using text of ??random?? alphabet, so one would not need to go through all nodes of the tree before it finds a tip. 
-
-### Searching through the tree
-Once the suffix tree for $T$ is build, then searching through the suffix tree is trivial. Since all the substring of the text $T$ is present in the suffix tree it is easy to verify if a pattern $P$ would be present in the text. It goes from the first character of the pattern $P_[1]$ until its last $P_[m]$, if one cannot proceed through the next character of pattern through the tree, it means that the pattern does not occur in the suffix tree/text. The operation of searching for the pattern through the tree takes $O(m)$ time. 
-
-In the worst-case scenario the labels (suffixes) of the following path contain one character each, resulting in $m$ child looks-up, resulting in time complexity of $O(m * time it takes to find the child edge)$.
-We have decided to evaluate the data based on 4 different scenarios:
-* Tx-Pc: where the text is variable and the pattern is constant
-* Tc-Px: where the text is constant and the pattern is variable
-* Tx-Px: both text and patterns are variable
-
-```{r}
+```{r, echo = F, message=F}
 setwd('/Users/PM/Dropbox/Genome_scale_algorithms/Genome_scale_algorithms/Project2')
 library(dplyr)
 library(ggpubr)
@@ -62,16 +54,71 @@ library(ggpubr)
 df_build.naive = read.csv( "Test - SuffixTree Build - Naive.csv" , header = F)
 colnames(df_build.naive) = c("Function", "Time", "Test", "text.len", "pattern.len", "occurrences", "?")
 
-
-
-df_search = read.csv( "Test - SuffixTree Search.csv" )
-colnames(df_search) = c("Function", "Time", "Test", "text.len", "pattern.len", "occurrences", "?")
-
 fixed_text_size_build <- df_build.naive %>%
   filter(text.len == 500)
 
 fixed_patter_size_build <- df_build.naive %>%
   filter(pattern.len == 10)
+
+
+plot1 <- ggplot(data = fixed_patter_size_build) + 
+  geom_point(mapping = aes(x = text.len/Time^2, y = Time)) +
+  ggtitle("Building tree: \nFixed pattern size: n^2 time") +
+  geom_hline(yintercept = 0.01, color = "red") + theme_bw()
+
+#plot2 <- ggplot(data = fixed_text_size_build) + 
+#  geom_point(mapping = aes(x = pattern.len/Time^2, y = Time)) + 
+#  geom_hline(yintercept = 0.18, color = "red") +
+#  ggtitle("Building tree: \nFixed text size: n^2 time") + theme_bw()
+
+# Subsetting data:
+bellow_pattern_size <-df_build.naive %>%
+  filter(pattern.len <= 250)  %>%
+  filter(pattern.len > 50)
+plot2 <- ggplot(data = bellow_pattern_size ) + 
+  geom_point(mapping = aes(x = pattern.len, y = Time, color = Test)) +
+  ggtitle("Search time for different variable combinations") + theme_bw()
+
+plot1
+
+```
+
+In these two plots it is clear to observe that the time complexity to construct the tree is quadratic ($O(n^2)$). This is because we need time $O(n - i + 1)$ for the $i-th$ suffix and hence the total running time is:
+$$\sum_{1}^{n} O(n - i + 1) = \sum_{1}^{n} O(i) = O(n^2) $$
+
+```{r}
+plot2
+```
+
+### Searching through the tree
+
+Once the suffix tree for $T$ is build, then searching through the tree for an exact match with a pattern $P$ is trivial. Since all the substring of the text $T$ is present in the suffix tree, it is easy to verify if a pattern $P$ would be present in the text. It goes from the first character of the pattern $P_{[1]}$ until its last $P_{[m]}$, if one cannot proceed through the next character of pattern through the tree, it means that the pattern does not occur in the suffix tree/text. The operation of searching for the pattern through the tree takes $O(m)$ time. 
+
+In the worst-case scenario the labels (suffixes) of the following path contain one character each, resulting in $m$ child looks-up, which gives a time complexity of $O(m$ * time it takes to find the child edge$)$. Let's define those look ups as $j$.
+
+Therefore, the time for the search can be split in 3 different operations:
+
+1. Finding the node where the pattern matches: $O(m)$
+2. Collecting the leaves: $O(j)$
+3. Both operation yield in: $O(m +j)$
+
+We have decided to evaluate the data based on 3 different scenarios:
+
+1. Tx-Pc: where the text is variable and the pattern is constant
+2. Tc-Px: where the text is constant and the pattern is variable
+3. Tx-Px: both text and patterns are variable
+
+Using 3 different strings types:
+
+1. aaa, alphabet size equal to 1 
+2. aab, alphabet size equal to 2, but just one character different in the end
+3. abc, alphabet size equal to 62 (including numbers and Upper case letters) 
+
+```{r}
+
+
+df_search = read.csv( "Test - SuffixTree Search.csv" )
+colnames(df_search) = c("Function", "Time", "Test", "text.len", "pattern.len", "occurrences", "?")
 
 fixed_text_size_search <- df_search %>%
   filter(text.len == 500)
@@ -79,37 +126,25 @@ fixed_text_size_search <- df_search %>%
 fixed_pattern_size_search <- df_search %>%
   filter(pattern.len == 10)
 
-
-plot1 <- ggplot(data = fixed_patter_size_build) + 
-  geom_point(mapping = aes(x = text.len/Time^2, y = Time)) +
-  ggtitle("Building tree: \nFixed pattern size: n^2 time") +
-  geom_hline(yintercept = 0.01, color = "red")
-
-plot2 <- ggplot(data = fixed_text_size_build) + 
-  geom_point(mapping = aes(x = pattern.len/Time^2, y = Time)) + 
-  geom_hline(yintercept = 0.18, color = "red") +
-  ggtitle("Building tree: \nFixed text size: n^2 time")
-
 plot3 <- ggplot(data = fixed_text_size_search) + 
   geom_point(mapping = aes(x = pattern.len/Time^2, y = Time)) + 
   geom_hline(yintercept = 0.00008, color = "red") +
-  ggtitle("Searching tree: \nFixed text size: n^2 time")
+  ggtitle("Searching tree: \nFixed text size: n^2 time") + theme_bw()
 
-#we dont need fourth plot since, searching the tree is not affected by text size, only the pattern
+plot3
 
-ggarrange(plot1,plot2,plot3,
-      ncol = 2, nrow =2) 
   
 ```
 
 ```{r}
 
-ggplot(data = df_build.naive) + 
+# Subsetting data:
+bellow_pattern_size <- df_search %>%
+  filter(pattern.len <= 250)  %>%
+  filter(pattern.len > 50)
+ggplot(data = bellow_pattern_size ) + 
   geom_point(mapping = aes(x = pattern.len, y = Time, color = Test)) +
-  ggtitle("")
+  ggtitle("Search time for different variable combinations") + theme_bw()
 
 ```
-
-
-Instruction of the project: https://github.com/mailund/gsa-exercises/tree/master/Project02
 
