Radix sort and fibonacci seq

--- a/Project4/Genome Scale algorithms - Project 4 - Maria, Mateo and Jacob.Rmd
+++ b/Project4/Genome Scale algorithms - Project 4 - Maria, Mateo and Jacob.Rmd
@@ -9,6 +9,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(ggpubr)
+library(tidyverse)
 ```
 Instruction of the project: https://github.com/mailund/gsa-exercises/tree/master/Project04
 
@@ -29,6 +30,11 @@ The program outputs the number of branching and non-branching tandem repeats to 
 We used the test data provided in testdata.zip to test the correctness of the program.
 
 ## Time complexity of Suffix arrays and BW-match
+```{r}
+radix = read.csv("time_radix.csv", header = T)
+ggplot(data = radix) + 
+        geom_point(mapping = aes(y = time/(n*log(n)), x = n)) + theme_bw() 
+```
 
 
 
