--- a/Project4/Genome Scale algorithms - Project 4 - Maria, Mateo and Jacob.Rmd
+++ b/Project4/Genome Scale algorithms - Project 4 - Maria, Mateo and Jacob.Rmd
@@ -34,7 +34,14 @@ We did not have any problems regarding implementation except Radix sort. Since s
 ## Evauluation
 We measured time for both, search using Burrows-Wheeler transformation and binary search and following plots are showing the results.
 ```{r}
+bin_search = read.csv("time_binary_search.csv", header = T)
+bwt_search = read.csv("time_bwt_search.csv", header = T)
 
+ggplot(data = bin_search) + 
+        geom_point(mapping = aes(y = time/(m*log(n)), x = n, color = scenario))
+
+ggplot(data = bwt_search) + 
+        geom_point(mapping = aes(y = time/m, x = n, color = scenario))
 ```
 
 
@@ -44,15 +51,10 @@ We used the test data provided in testdata.zip to test the correctness of the pr
 ## Time complexity of sorting (python sort and radix sort)
 
 ```{r}
-bin_search = read.csv("time_binary_search.csv", header = T)
-#bin_bwt = read.csv("time_bwt_search.csv", header = T)
+
 radix = read.csv("time_radix.csv", header = T)
 sorted = read.csv("time_sorted.csv", header = T)
-ggplot(data = bin_search) + 
-        geom_point(mapping = aes(y = time/3*log(n), x = n))
 
-ggplot(data = radix) + 
-        geom_point(mapping = aes(y = time, x = n))
 ```
 
 
