--- a/Project4/Genome Scale algorithms - Project 4 - Maria, Mateo and Jacob.Rmd
+++ b/Project4/Genome Scale algorithms - Project 4 - Maria, Mateo and Jacob.Rmd
@@ -10,10 +10,11 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 library(ggpubr)
 library(tidyverse)
+library(gridExtra)
 ```
 Instruction of the project: https://github.com/mailund/gsa-exercises/tree/master/Project04
 
-##Project 4 - Suffix arrays and BW-match
+## Project 4 - Suffix arrays and BW-match
 
 ## Program description
 
@@ -25,15 +26,19 @@ python search-bs.py [text-filename] [pattern]
 python search-bw.py [text-filename] [pattern]
 ```
 
-The program outputs positions where the second parameter (patern) occurs in the text from file. The positions are sorted by index of occurence and if the pattern does not exist in the text *None* is returned.
+The program outputs positions where the second parameter (pattern) occurs in the text file. The positions are sorted by index of occurrence and if the pattern does not exist in the text *None* is returned.
 
-##Problems
-We did not have any problems regarding implementation except Radix sort. Since sorting suffixes using radix sort requieres creating a 'bucket' for each letter in alphabet and taking ASCII values of letters we could end up with potential problems. Each letter in character coresponds to a integer value called ASCII value but special scharacters could not be found there, which can cause problems when trying to sort them using radix sort. Also implementation of radix sort 
+## Problems
 
+We did not have any problems regarding implementation except Radix sort. Since sorting suffixes using radix sort requires creating a 'bucket' for each letter in alphabet and taking ASCII values of letters we could end up with potential problems. Each letter in character corresponds to an integer value called ASCII value but special characters could not be found there, which can cause problems when trying to sort them using radix sort.
 
-## Evauluation
-We measured time for both, search using Burrows-Wheeler transformation and binary search and following plots are showing the results.
-```{r}
+## Evaluation
+We measured time for both, search using Burrows-Wheeler transformation and binary search and following plots are showing the results. Two scenarios were tested: 
+
+1. Patterns matching the text.
+2. Random text and random pattern.
+
+```{r, echo = F, warning=F}
 bin_search = read.csv("time_binary_search.csv", header = T)
 bwt_search = read.csv("time_bwt_search.csv", header = T)
 
@@ -43,7 +48,7 @@ ggplot(data = bin_search) +
         ylim(0,2.5e-08) + 
         xlim(0,10000) + 
         ggtitle("Time measures for Binary search comparing two scenarios") +
-        theme_bw()
+        theme_bw() -> binary_timing
  
 ggplot(data = bwt_search) + 
         geom_point(mapping = aes(y = time/m, x = n, color = scenario)) +
@@ -51,12 +56,15 @@ ggplot(data = bwt_search) +
         ylim(0,1.5e-07) + 
         xlim(0,10000) + 
         ggtitle("Time measures for BWT search comparing two scenarios") +
-        theme_bw()
+        theme_bw() -> bw_timing
+
+grid.arrange(binary_timing, bw_timing)
 ```
 
+It is possible to observe that both implementations follow the expected time complexity. 
 
 ## Test of correctness
-We used the test data provided in testdata.zip to test the correctness of the program.
+We used the test data provided in folder test_data to test the correctness of the program. The outputs are the same as given by previous projects.
 
 ## Time complexity of sorting (python sort and radix sort)
 
